# Deepcoin

./: CONTRIBUTING.md  INSTALL.md  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libdeepcoinconsensus.pc.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.h  bech32.h  blockencodings.h  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.cpp~  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  (+94 more)
src/bench/: .gitignore  bench.h  bench_deepcoin.cpp  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: deepcoin-config.h.in
src/consensus/: consensus.h  merkle.h  params.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/index/: base.h  txindex.h
src/interfaces/: README.md  handler.h  node.cpp  node.h  wallet.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  deepcoin.cpp  deepcoin.qrc  deepcoin_locale.qrc  deepcoinaddressvalidator.cpp  deepcoinaddressvalidator.h  deepcoinamountfield.cpp  deepcoinamountfield.h  deepcoingui.cpp  deepcoingui.h  deepcoinstrings.cpp  deepcoinunits.cpp  deepcoinunits.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+54 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: deepcoin_af.ts  deepcoin_af_ZA.ts  deepcoin_ar.ts  deepcoin_be_BY.ts  deepcoin_bg.ts  deepcoin_bg_BG.ts  deepcoin_ca.ts  deepcoin_ca@valencia.ts  deepcoin_ca_ES.ts  deepcoin_cs.ts  deepcoin_cy.ts  deepcoin_da.ts  deepcoin_de.ts  deepcoin_el.ts  deepcoin_el_GR.ts  deepcoin_en.ts  deepcoin_en_GB.ts  deepcoin_eo.ts  deepcoin_es.ts  deepcoin_es_AR.ts  deepcoin_es_CL.ts  deepcoin_es_CO.ts  deepcoin_es_DO.ts  deepcoin_es_ES.ts  deepcoin_es_MX.ts  deepcoin_es_UY.ts  deepcoin_es_VE.ts  deepcoin_et.ts  deepcoin_et_EE.ts  deepcoin_eu_ES.ts  deepcoin_fa.ts  deepcoin_fa_IR.ts  deepcoin_fi.ts  deepcoin_fr.ts  deepcoin_fr_CA.ts  deepcoin_fr_FR.ts  deepcoin_gl.ts  deepcoin_he.ts  deepcoin_hi_IN.ts  deepcoin_hr.ts  (+46 more)
src/qt/res/: deepcoin-qt-res.rc
src/qt/res/icons/: deepcoin.icns
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.h
src/script/: deepcoinconsensus.cpp  deepcoinconsensus.h  descriptor.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_deepcoin_NativeSecp256k1.c  org_deepcoin_NativeSecp256k1.h  org_deepcoin_Secp256k1Context.c  org_deepcoin_Secp256k1Context.h
src/secp256k1/src/java/org/deepcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+30 more)
src/test/data/: README.md  sighash.json  tx_invalid.json  tx_valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: coincontrol.h  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.h  fees.cpp  fees.h  init.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.h
src/wallet/test/: coinselector_tests.cpp  psbt_wallet_tests.cpp  wallet_crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+229 files in other folders)
